// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackToResults component renders children if no url query params provided 1`] = `
<h1>
  Rest of Breadcrumbs
</h1>
`;

exports[`BackToResults component renders children if url query params is not related to search 1`] = `
<h1>
  Rest of Breadcrumbs
</h1>
`;

exports[`BackToResults component renders correctly 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/search/?filters=%7B%22brand%22%3A%22BRAND_1%22%7D&q=query&tab=pages\\"}"
    href="/en/search/?filters=%7B%22brand%22%3A%22BRAND_1%22%7D&q=query&tab=pages"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;

exports[`BackToResults component renders cta if url query params includes filters values 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/search/?filters=%7B%22brands%22%3A%5B%22BRAND_1%22%5D%7D\\"}"
    href="/en/search/?filters=%7B%22brands%22%3A%5B%22BRAND_1%22%5D%7D"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;

exports[`BackToResults component renders cta if url query params includes previous page (for plp) 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/plp-page\\"}"
    href="/en/plp-page"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;

exports[`BackToResults component renders cta if url query params includes search request 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/search/?q=query\\"}"
    href="/en/search/?q=query"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;

exports[`BackToResults component renders cta if url query params includes search tab 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/search/?tab=pages\\"}"
    href="/en/search/?tab=pages"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;

exports[`BackToResults component renders cta without children if mobile 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/search/?filters=%7B%22brand%22%3A%22BRAND_1%22%7D&q=query&tab=pages\\"}"
    href="/en/search/?filters=%7B%22brand%22%3A%22BRAND_1%22%7D&q=query&tab=pages"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
</div>
`;

exports[`BackToResults component when url search param has more than one parameters along with pathname param renders removes only path name parameter and keeps other parameters 1`] = `
<div
  class="BackToResults"
>
  <a
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
    data-gtm="{\\"id\\":\\"nav-breadcrumb-back-to-results\\",\\"label\\":\\"MC: searchPage.backToResults\\",\\"action\\":\\"/en/plp-page?tab=pages\\"}"
    href="/en/plp-page?tab=pages"
    tabindex="0"
  >
    <span
      class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowBackIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
    MC: searchPage.backToResults
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </a>
  <div
    class="BackToResults--separator"
  />
  <h1>
    Rest of Breadcrumbs
  </h1>
</div>
`;
